--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<li class="nav-item">
 							<a class="nav-link scroll-link" href="#home">Home</a>
 					</li>
-					<!-- <li class="nav-item">
+					<!-- <li class="nav-items">
 							<a class="nav-link scroll-link" href="#about-us">About</a>
 					</li> -->
 					<li class="nav-item">
